aspnetapp-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "aspnetapp-deployment"
  namespace: "default"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "aspnetapp"
    spec:
      containers:
      - image: 862832033224.dkr.ecr.us-east-1.amazonaws.com/aspnet4you-ecr:aspnetapp-v2
        imagePullPolicy: Always
        name: "aspnetapp"
        ports:
        - containerPort: 80
