aspnetapp-ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "aspnetapp-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: aspnetapp-ingress
spec:
  rules:
  - http:
      paths:
      - path: /nginx
        backend:
         serviceName: "nginx-service"
         servicePort: 80
      - path: /*
        backend:
         serviceName: "aspnetapp-service"
         servicePort: 80
